--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "python-shell": "^5.0.0",
     "web-scraping-electron-app": "file:"
   }
 }
