--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -4,18 +4,29 @@
   "description": "A web scraping application that is to be used for assisting in NLP model training",
   "main": "main.js",
   "scripts": {
-	"dev": "npx electronmon .",
-    "start": "electron .",
-    "build": "npm ci"
+    "dev": "npx electronmon .",
+    "build": "npm ci",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "ASU Capstone 2024 Group 8",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@electron-forge/cli": "^7.5.0",
+    "@electron-forge/maker-deb": "^7.5.0",
+    "@electron-forge/maker-rpm": "^7.5.0",
+    "@electron-forge/maker-squirrel": "^7.5.0",
+    "@electron-forge/maker-zip": "^7.5.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.5.0",
+    "@electron-forge/plugin-fuses": "^7.5.0",
+    "@electron/fuses": "^1.8.0",
     "electron": "^33.0.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "electron-squirrel-startup": "^1.0.1",
     "jquery": "^3.7.1",
     "python-shell": "^5.0.0",
     "web-scraping-electron-app": "file:"
