--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
       working-directory: './web-scraping-electron-app'
-    - run: npm run build --if-present
+    - run: npm run build:node --if-present
       working-directory: './web-scraping-electron-app'
     # This will be enabled when we set up tests
     #- run: npm test
