--- a/web-scraping-electron-app/Pipfile
+++ b/web-scraping-electron-app/Pipfile
@@ -8,6 +8,7 @@ fastapi = {extras = ["standard"], version = "*"}
 requests = "*"
 beautifulsoup4 = "*"
 uvicorn = "*"
+asyncio = "*"
 
 [dev-packages]
 
