US-54 Update Python build/test workflow
Corrections made to remove requirements.txt in favor of using pipenv (Pipfile) for managing dependencies. Also updated the yml to test on multiple python versions.

--- a/web-scraping-electron-app/Pipfile
+++ b/web-scraping-electron-app/Pipfile
@@ -8,8 +8,11 @@ fastapi = {extras = ["standard"], version = "*"}
 requests = "*"
 beautifulsoup4 = "*"
 uvicorn = "*"
+sqlalchemy = "*"
 
 [dev-packages]
+flake8 = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.12"
