--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,13 +23,13 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        cache-dependency-path: 'web-scraping-electron-app/Pipfile.lock'
         python-version: ${{ matrix.python-version }}
+        cache-dependency-path: 'web-scraping-electron-app/Pipfile.lock'
+        cache: 'pipenv'
+    - name: Install pipenv
+      run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pipenv
-        pipenv install
+      run: pipenv install
       working-directory: './web-scraping-electron-app'
     - name: Lint with flake8
       run: |
