--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,7 +38,8 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         pipenv run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       working-directory: './web-scraping-electron-app'
-    - name: Test with pytest
-      run: |
-        pipenv run pytest
-      working-directory: './web-scraping-electron-app'
+      # This will be enabled when we set up tests
+    #- name: Test with pytest
+    #  run: |
+    #    pipenv run pytest
+    #  working-directory: './web-scraping-electron-app'
