--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "electron-store": "^10.0.0",
     "jquery": "^3.7.1",
     "python-shell": "^5.0.0",
     "web-scraping-electron-app": "file:"
