--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -14,7 +14,8 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "axios": "^1.7.7",
-    "electron": "^33.0.0"
+    "electron": "^33.0.0",
+    "electron-builder": "^25.1.8"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
