--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "electron-store": "^10.0.0",
+    "firebase": "^11.0.2",
     "jquery": "^3.7.1",
     "python-shell": "^5.0.0",
     "web-scraping-electron-app": "file:"
