--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -5,7 +5,10 @@
   "main": "main.js",
   "scripts": {
     "dev": "npx electronmon .",
-    "start": "electron ."
+    "start": "electron .",
+    "build:node": "yarn install",
+    "build:py": "chmod +x build.sh && ./scripts/build.sh",
+    "build": "yarn run build:node && yarn run build:py"
   },
   "author": "ASU Capstone 2024 Group 8",
   "license": "UNLICENSED",
