--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -8,7 +8,7 @@
     "start": "electron ."
   },
   "author": "ASU Capstone 2024 Group 8",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "devDependencies": {
     "@electron-forge/cli": "^7.5.0",
     "axios": "^1.7.7",
