--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -10,6 +10,7 @@
   "author": "ASU Capstone 2024 Group 8",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@electron-forge/cli": "^7.5.0",
     "axios": "^1.7.7",
     "electron": "^33.0.0"
   },
@@ -21,7 +22,6 @@
     "electron-store": "^10.0.0",
     "firebase": "^11.0.2",
     "jquery": "^3.7.1",
-    "python-shell": "^5.0.0",
     "web-scraping-electron-app": "file:"
   }
 }
