--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,5 +23,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
+      with:
+        cache-dependency-path: 'web-scraping-electron-app/yarn.lock'
+        node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
+    - run: yarn install
     - run: node tests/test.js
       working-directory: './web-scraping-electron-app'
