Fixed YML file and reset test to pass

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main", "dev", "Task-149" ]
+    branches: [ "main", "dev"]
   pull_request:
-    branches: [ "main", "dev", "Task-149" ]
+    branches: [ "main", "dev"]
 
 jobs:
   build:
