Added test cases. About 70% done with the class, just a couple methds left

--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A web scraping application that is to be used for assisting in NLP model training",
   "main": "main.js",
-  
+  "type": "module", 
   "scripts": {
     "dev": "npx electronmon .",
     "start": "electron .",
