--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "async-mutex": "^0.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "electron-log": "^4.4.8",
