--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -1,18 +1,23 @@
 {
   "name": "web-scraping-electron-app",
   "version": "1.0.0",
+  "type": "module",
   "description": "A web scraping application that is to be used for assisting in NLP model training",
   "main": "main.js",
-  "scripts": {
-    "dev": "npx electronmon .",
-    "start": "electron ."
-  },
   "author": "ASU Capstone 2024 Group 8",
   "license": "UNLICENSED",
+  "scripts": {
+    "start": "electron-vite preview",
+    "dev": "electron-vite dev",
+    "prebuild": "electron-vite build"
+  },
   "devDependencies": {
     "@electron-forge/cli": "^7.5.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.7",
-    "electron": "^33.0.0"
+    "electron": "^33.0.0",
+    "electron-vite": "^2.3.0",
+    "vite": "^5.4.14"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -23,7 +28,8 @@
     "electron-store": "^10.0.0",
     "firebase": "^11.0.2",
     "jquery": "^3.7.1",
-    "tail": "^2.2.6",
-    "web-scraping-electron-app": "file:"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tail": "^2.2.6"
   }
 }
