--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -27,6 +27,7 @@
     "electron-store": "^10.0.0",
     "firebase": "^11.0.2",
     "jquery": "^3.7.1",
+    "react-router-dom": "^7.1.5",
     "tail": "^2.2.6",
     "web-scraping-electron-app": "file:"
   }
