--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
-        cache-dependency-path: 'web-scraping-electron-app/yarn.lock'
+        cache-dependency-path: 'backend/yarn.lock'
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
     - run: yarn install
-      working-directory: './web-scraping-electron-app'
+      working-directory: './backend'
