--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -19,6 +19,7 @@
     "async-mutex": "^0.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "datatables": "^1.10.18",
     "electron-log": "^4.4.8",
     "electron-store": "^10.0.0",
     "firebase": "^11.0.2",
