Initialized ESLint and chose project settings

--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -11,11 +11,13 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@electron-forge/cli": "^7.5.0",
+    "@eslint/js": "^9.22.0",
     "axios": "^1.7.7",
     "electron": "^33.0.0",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^16.0.0",
     "prettier": "^3.5.3"
   },
   "dependencies": {
