feat: - Added linting and formatting scripts to package.json:   - yarn lint   - yarn lint:fix   - yarn format   - yarn format:check - Remaining 87 issues require manual review (mostly no-unused-vars, no-undef, etc.)

--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -5,7 +5,11 @@
   "main": "main.js",
   "scripts": {
     "dev": "npx electronmon .",
-    "start": "electron ."
+    "start": "electron .",
+    "lint": "eslint \"**/*.{js,mjs}\"",
+    "lint:fix": "eslint \"**/*.{js,mjs}\" --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "author": "ASU Capstone 2024 Group 8",
   "license": "UNLICENSED",
