--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -5,14 +5,16 @@
   "main": "src/electron/main/main.js",
   "scripts": {
     "dev": "npx electronmon .",
-    "start": "electron ."
+    "start": "electron .",
+      "docs": "jsdoc -c jsdoc.json"
   },
   "author": "ASU Capstone 2024 Group 8",
   "license": "UNLICENSED",
   "devDependencies": {
     "@electron-forge/cli": "^7.5.0",
     "axios": "^1.7.7",
-    "electron": "^33.0.0"
+    "electron": "^33.0.0",
+    "jsdoc": "^4.0.4"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
