--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.5.0",
     "axios": "^1.7.7",
+    "docdash": "^2.0.2",
     "electron": "^33.0.0",
     "jsdoc": "^4.0.4"
   },
