--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "npx electronmon .",
     "start": "electron .",
-    "docs": "jsdoc -c jsdoc.json"
+    "docs": "jsdoc -c jsdoc.json",
+    "test": "jest"
   },
   "author": "ASU Capstone 2024 Group 8",
   "license": "UNLICENSED",
@@ -16,6 +17,7 @@
     "docdash": "^2.0.2",
     "docsify-cli": "^4.4.4",
     "electron": "^33.0.0",
+    "jest": "^29.7.0",
     "jsdoc": "^4.0.4",
     "jsdoc-to-markdown": "^9.1.1"
   },
