--- a/web-scraping-electron-app/package.json
+++ b/web-scraping-electron-app/package.json
@@ -7,11 +7,13 @@
     "dev": "npx electronmon .",
     "start": "electron .",
     "docs": "jsdoc -c jsdoc.json",
-    "test": "jest"
+    "test": "tsc --module commonjs && jest"
+
   },
   "author": "ASU Capstone 2024 Group 8",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
     "@electron-forge/cli": "^7.5.0",
     "axios": "^1.7.7",
     "docdash": "^2.0.2",
